# inquisitor

./: .gitignore  Cargo.toml  inquisitor-rs.iws
src/: data_builder.rs  lib.rs  main.rs
src/client/: mod.rs
src/client/responses/: bulk_response.rs  common.rs  error.rs  mod.rs  parsing.rs
src/data_builder/: mod.rs
